# aries

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build_prod.sh  docker-compose.yml  prod.Dockerfile  protodep.toml
migrations/2020-12-26-011224_create_role/: down.sql  up.sql
migrations/2020-12-26-011453_create_m_products/: down.sql  up.sql
proto/: product.proto
src/: infrastructures.rs  injectors.rs  main.rs  schema.rs  use_cases.rs
src/domains/: models.rs
src/domains/models/: product_model.rs
src/domains/repositories/: product_repository.rs
src/infrastructures/: database.rs  repositories.rs  tonic_server.rs
src/infrastructures/repositories/: product_repository.rs
src/injectors/: product_injector.rs
src/interfaces/: controllers.rs  service.rs
src/interfaces/controllers/: context.rs  product_controller.rs
src/use_cases/: product_repository_use_case.rs  product_use_case.rs
