[package]
name = "aries"
version = "0.1.0"
authors = ["k-michikawa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono", "uuid", "numeric"] }
bigdecimal = "0.2.0"
dotenv = "0.15.0"
chrono = "0.4.19"
uuid = { version = ">=0.2.0, <0.7.0", features = ["v4", "serde"] }
tonic = "0.3"
prost = "0.6"
prost-derive = "0.6"
# v1は依存関係の問題で動かない
tokio = { version = "^0.2.13", features = ["macros"] }

[build-dependencies]
tonic-build = "0.3"
